# auto_dlsite_rename

./: Cargo.toml  README.md  settings.json
samplefiles/: settings.json
src/: main.rs
