[package]
name = "auto_dlsite_rename"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Jade <tao@kayanoai.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
regex = "1.5.4"
lazy-regex = "2.2.2"
scraper = "0.12.0"
tokio = { version = "1.17.0", features = ["full"] }
reqwest = "0.11.9"
