[package]
name = "DlsiteRenamer"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Jade <tao@kayanoai.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
regex = "1.5.4"
scraper = "0.19.0"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = "0.11.9"
clap = { version = "4.5.2", features = ["derive"] }
log = "0.4.20"
chrono = "0.4.33"
lazy_static = "1.4.0"
my_logger = { git = "https://github.com/thelastfantasy/my_logger.git" }
